@@ -830,20 +830,22 @@ Here are all the supported configuration settings.
 
 * `annex.bloomcapacity`
 
-  The `git annex unused` command uses a bloom filter to determine
-  what data is no longer used. The default bloom filter is sized to handle
-  up to 500000 keys. If your repository is larger than that,
-  you can adjust this to avoid `git annex unused` not noticing some unused
-  data files. Increasing this will make `git-annex unused` consume more memory;
+  The `git annex unused` and `git annex sync --content` commands use
+  a bloom filter to determine what files are present in eg, the work tree.
+  The default bloom filter is sized to handle
+  up to 500000 files. If your repository is larger than that,
+  you should increase this value. Larger values will
+  make `git-annex unused` and `git annex sync --content` consume more memory;
   run `git annex info` for memory usage numbers.
 
 * `annex.bloomaccuracy`
 
   Adjusts the accuracy of the bloom filter used by
-  `git annex unused`. The default accuracy is 1000 --
-  1 unused file out of 1000 will be missed by `git annex unused`. Increasing
-  the accuracy will make `git annex unused` consume more memory;
-  run `git annex info` for memory usage numbers.
+  `git annex unused` and `git annex sync --content`. 
+  The default accuracy is 10000000 -- 1 unused file out of 10000000
+  will be missed by `git annex unused`. Increasing the accuracy will make
+  `git annex unused` consume more memory; run `git annex info`
+  for memory usage numbers.
 
 * `annex.sshcaching`
 
